[package]
authors = ["Jason Ozias <jason.ozias@kroger.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
name = "aoc"
readme = "README.md"
resolver = "2"
version = "0.1.0"

[dependencies]
anyhow = "1.0.70"
bytecount = "0.6.3"
clap = "2.34.0"
getset = "0.1.2"
indexmap = "2.1.0"
itertools = "0.12.0"
md5 = "0.7.0"
ndarray = "0.15.6"
pathfinding = "4.2.1"
primal = "0.3.2"
regex = "1.7.3"
sliding_windows = "3.0.0"
thiserror = "1.0.40"
time = "0.3.20"
