[package]
authors = ["Jason Ozias <jason.ozias@kroger.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
name = "aoc"
readme = "README.md"
resolver = "2"
version = "0.1.0"

[dependencies]
anyhow = "1.0.99"
bytecount = "0.6.9"
clap = "2.34.0"
getset = "0.1.6"
indexmap = "2.11.0"
itertools = "0.14.0"
md5 = "0.8.0"
ndarray = "0.16.1"
pathfinding = "4.14.0"
primal = "0.3.3"
regex = "1.11.2"
sliding_windows = "3.0.0"
thiserror = "2.0.16"
time = "0.3.41"
